<resources>
    <string name="app_name">GSPT</string>
    <string name="tractor">Tracteurs</string>
    <string name="piece">Pièces</string>
    <string name="dbStatusOk">Base de données chargée : %d tracteur(s) et %d pièce(s)</string>
    <string name="dbStatusKo">Erreur chargement de la base</string>
    <string name="add">Ajouter</string>
    <string name="cross">x</string>
    <string name="currency">€</string>
    <string name="libelle">Libelle</string>
    <string name="cases">Casier</string>
    <string name="price">Prix</string>
    <string name="comment">Commentaire</string>
    <string name="editPicture">Modifier l\'image</string>
    <string name="amount">Nombre</string>
    <string name="reference">Référence</string>
    <string name="ref_already_exist">La référence existe déjà !</string>
    <string name="tractor_already_exist">Le tracteur existe déjà !</string>
    <string name="model">Modèle</string>
    <string name="brand">Marque</string>
    <string name="tractor_list">Liste des tracteurs</string>
    <string name="dbLocation">Emplacement de la base : %s</string>
    <string name="piece_list">Liste des pièces</string>
    <string name="edit_piece">Editer la pièce</string>
    <string name="edit_tractor">Editer le tracteur</string>
    <string name="version">Version</string>
    <string name="remove">Supprimer</string>
</resources>